src/test/ui/hrtb/issue-30786.migrate.stderr
error: implementation of `Stream` is not general enough
  --> $DIR/issue-30786.rs:108:22
   |
LL | / pub trait Stream {
LL | |     type Item;
LL | |     fn next(self) -> Option<Self::Item>;
LL | | }
   | |_- trait `Stream` defined here
...
LL |       let map = source.map(|x: &_| x);
   |                        ^^^ implementation of `Stream` is not general enough
   |
   = note: `Stream` would have to be implemented for the type `&'0 mut Map<Repeat, [closure@$DIR/issue-30786.rs:108:26: 108:35]>`, for any lifetime `'0`...
   = note: ...but `Stream` is actually implemented for the type `&'1 mut Map<Repeat, [closure@$DIR/issue-30786.rs:108:26: 108:35]>`, for some specific lifetime `'1`

error: aborting due to previous error

